meta-digi layer for Yocto
Internal: 91c8fadf1f4edd7de0e3d70de413e7536382be90

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,10 +1,10 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded for Yocto"
-DISTRO_VERSION = "1.4.1"
+DISTRO_VERSION = "1.4.2"
 DISTRO_CODENAME = "dylan"
 SDK_DISTRO = "poky"
 SDK_VENDOR = "-pokysdk"
-SDK_VERSION := "1.4.1"
+SDK_VERSION := "${@'${DISTRO_VERSION}'}"
 
 MAINTAINER = "Digi Support <support@digi.com>"
 
@@ -80,11 +80,6 @@ MIRRORS =+ "\
 ftp://.*/.*      http://downloads.yoctoproject.org/mirror/sources/ \n \
 http://.*/.*     http://downloads.yoctoproject.org/mirror/sources/ \n \
 https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
-
-MIRRORS += "\
-ftp://.*/.*      ${DIGI_MIRROR}/ \n \
-http://.*/.*     ${DIGI_MIRROR}/ \n \
-https://.*/.*    ${DIGI_MIRROR}/ \n"
 
 # The CONNECTIVITY_CHECK_URI's are used to test whether we can succesfully
 # fetch from the network (and warn you if not). To disable the test set
