--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -21,9 +21,9 @@ DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
 DIGI_MTK_GIT ?= "git://stash.digi.com/"
 DIGI_GIT	 ?= "${DIGI_LOG_GIT}"
-DIGI_MIRROR  ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
+DIGI_PKG_SRC ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
 
-DIGI_GITHUB_GIT ?= "git://github.com/dgii"
+DIGI_GITHUB_GIT ?= "git://github.com/digidotcom"
 
 # Accept FSL licenses
 ACCEPT_FSL_EULA = "1"
