--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -9,8 +9,8 @@ KERNEL_DEVICETREE = "i${CPU_FAMILY}-${MACHINE}.dtb"
 
 SERIAL_CONSOLES = "115200;ttymxc3"
 
-# U-Boot script to be copied to the SD image
-BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
+# U-Boot script to be copied to the boot image
+BOOT_SCRIPTS = "boot.scr:boot.scr"
 
-# Boot partition size for FAT image generation, 64MiB
-BOARD_BOOTIMAGE_PARTITION_SIZE ?= "67108864"
+# Boot partition size in KiB, (default 64MiB)
+BOARD_BOOTIMAGE_PARTITION_SIZE ?= "65536"
