meta-digi layer for Yocto
Internal: de1b33eda63c5db77790a22d0681585708fc46ea

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,6 +1,6 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "1.6.6"
+DISTRO_VERSION = "1.6.7"
 DISTRO_CODENAME = "daisy"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'}"
@@ -13,7 +13,7 @@ LOCALCONF_VERSION = "1"
 LAYER_CONF_VERSION ?= "6"
 
 # Override these in poky based distros
-POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland"
+POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland cellular"
 POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
@@ -31,9 +31,6 @@ FEATURE_PACKAGES_dey-gstreamer = "packagegroup-dey-gstreamer"
 FEATURE_PACKAGES_dey-network = "packagegroup-dey-network"
 FEATURE_PACKAGES_dey-qt = "packagegroup-dey-qt"
 FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
-
-# Features without a packagegroup need to be explicitely added.
-IMAGE_FEATURES[validitems] += "dey-test"
 
 # Set the PREFERRED_PROVIDER for jpeg functionality based on the MACHINE
 # architecture.  For armv7a devices libjpeg-turbo should be used to take
