meta-digi layer for Yocto
Internal: e5ca04132278d944e6f05999309f0ee353aa9a09

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -9,13 +9,8 @@ BBFILE_COLLECTIONS += "digi-arm"
 BBFILE_PATTERN_digi-arm := "^${LAYERDIR}/"
 BBFILE_PRIORITY_digi-arm = "5"
 
-# This is the FSL license agreement.
-FSL_MMK_EULA_FILE = "${LAYERDIR}/FSL_MMK_EULA"
-
-# This is Digi's General license agreement.
+# Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
-
-# This is Digi's Open Source license agreement.
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
@@ -24,6 +19,3 @@ DIGI_GIT	 ?= "${DIGI_LOG_GIT}"
 DIGI_PKG_SRC ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
 
 DIGI_GITHUB_GIT ?= "git://github.com/digidotcom"
-
-# Accept FSL licenses
-ACCEPT_FSL_EULA = "1"
