--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,6 +1,6 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "1.6.7"
+DISTRO_VERSION = "1.6.8"
 DISTRO_CODENAME = "daisy"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'}"
@@ -11,6 +11,9 @@ TARGET_VENDOR = "-dey"
 
 LOCALCONF_VERSION = "1"
 LAYER_CONF_VERSION ?= "6"
+
+# Name the build with the timestamp used in the name of the images
+BUILDNAME = "${DATE}${TIME}"
 
 # Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland cellular"
