meta-digi layer for Yocto
Internal: 040d4f426fd6cfe7f4f6bd1ba8b77d4a5e70281f

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccimx6sbc/local.conf.sample
+++ b/sdk/config/ccimx6sbc/local.conf.sample
@@ -74,6 +74,7 @@ MACHINE = "ccimx6sbc"
 # wbdl1024       Y         Y      duallite/solo      1024MiB       (0x0B)
 # dl512          N         N      duallite/solo       512MiB       (0x0C)
 # wbq2048        Y         Y      quad/dual          2048MiB       (0x12)
+# wbdl512        Y         Y      duallite/solo       512MiB       (0x13)
 MACHINE_VARIANT = "wbq1024"
 
 #
