meta-digi layer for Yocto
Internal: cb41ca36de82cae2a248b23d3c0a087dade5a7a2

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -17,6 +17,8 @@ BUILDNAME = "${DATE}${TIME}"
 
 # Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland cellular"
+POKY_DEFAULT_DISTRO_FEATURES_ccardimx28 += " bluez5"
+POKY_DEFAULT_DISTRO_FEATURES_ccimx6 += " bluez5"
 POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
