--- a/meta-digi-arm/recipes-kernel/kernel-module-atheros/kernel-module-atheros/Makefile
+++ b/meta-digi-arm/recipes-kernel/kernel-module-atheros/kernel-module-atheros/Makefile
@@ -1,5 +1,4 @@
 ATH_DRV_BASEDIR := compat-wireless
-ATH_FIR_BASEDIR := Firmware_Package/target/AR6003/hw2.1.1
 
 ifneq ($(KERNELRELEASE),)
 
@@ -28,15 +27,6 @@ obj-y += $(ATH_DRV_BASEDIR)/drivers/net/wireless/ath/ath6kl/
 
 else #ifneq ($(KERNELRELEASE),)
 
-## Firmware files
-FIRMWARE := $(ATH_FIR_BASEDIR)/fw_tablet_dongle/athtcmd_ram.bin
-FIRMWARE += $(ATH_FIR_BASEDIR)/fw_tablet_dongle/athwlan.bin
-FIRMWARE += $(ATH_FIR_BASEDIR)/fw_tablet_dongle/fw-4.bin
-FIRMWARE += $(ATH_FIR_BASEDIR)/fw_tablet_dongle/nullTestFlow.bin
-FIRMWARE += $(ATH_FIR_BASEDIR)/fw_tablet_dongle/utf.bin
-FIRMWARE += $(ATH_FIR_BASEDIR)/Digi_6203-6233-US.bin
-FIRMWARE += $(ATH_FIR_BASEDIR)/Digi_6203-6233-World.bin
-
 SRC := $(shell pwd)
 
 all:
@@ -47,9 +37,9 @@ modules_install:
 	# Fix installation directory of the modules.
 	find $(INSTALL_MOD_PATH)/lib/modules/$(KERNEL_VERSION)/extra/$(ATH_DRV_BASEDIR) -type f -name '*.ko' | \
 		xargs -I modfile mv -f modfile $(INSTALL_MOD_PATH)/lib/modules/$(KERNEL_VERSION)/extra/
+	# Rename cfg80211 module.
+	find $(INSTALL_MOD_PATH)/lib/modules/$(KERNEL_VERSION)/extra/ -type f -name 'cfg80211.ko' | \
+		xargs -I modfile mv -f modfile $(INSTALL_MOD_PATH)/lib/modules/$(KERNEL_VERSION)/extra/cfg80211_ath.ko
 	rm -rf $(INSTALL_MOD_PATH)/lib/modules/*/extra/$(ATH_DRV_BASEDIR)
-	# Install firmware
-	mkdir -p $(INSTALL_MOD_PATH)/lib/firmware/ath6k/AR6003/hw2.1.1/
-	install -m 0644 $(FIRMWARE) $(INSTALL_MOD_PATH)/lib/firmware/ath6k/AR6003/hw2.1.1/
 
 endif #ifneq ($(KERNELRELEASE),)
