--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -17,8 +17,15 @@ BUILDNAME = "${DATE}${TIME}"
 
 # Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland cellular"
+POKY_DEFAULT_DISTRO_FEATURES_append_ccardimx28 = " bluez5"
+POKY_DEFAULT_DISTRO_FEATURES_append_ccimx6 = " bluez5"
 POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
+
+# Set the PREFERRED_PROVIDER for bluez-hcidump package based on the bluez
+# version.  For bluez5 we use the own package provided by it.
+PREFERRED_PROVIDER_bluez-hcidump_ccardimx28 = "bluez5"
+PREFERRED_PROVIDER_bluez-hcidump_ccimx6 = "bluez5"
 
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DEFAULT_DISTRO_FEATURES}"
 
